--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bateria</title>
+  <title> Happy New Year </title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Playfair+Display+SC:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-  <h1 id="title">Bateria 🥁</h1>
-  <h3 id="subtitle">Conjunt d'instruments de percussió</h3>
+  <h1 class="glow" id="title"> Happy New Year</h1>
+    <p class="any"> 2024 </p>
+  <h3 id="subtitle"> 🍀 Good luck and health 🍀 </h3>
   <div class="set">
+    <button class="f drum">f</button>
+    <button class="i drum">i</button>
+    <button class="r drum">r</button>
+    <button class="e drum">e</button>
     <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
+    <button class="o drum">o</button>
+    <button class="r drum">r</button>
     <button class="k drum">k</button>
-    <button class="l drum">l</button>
   </div>
 
-
   <footer>
-    Fet amb ❤️ des de Granollers
+    Made with ❤️ in Granollers
   </footer>
   
   <script src="index.js" charset="utf-8"></script>
