--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <p class="any"> 2024 </p>
   <h3 id="subtitle"> 🍀 Good luck and health 🍀 </h3>
   <div class="set">
-    <button class="f drum">f</button>
-    <button class="i drum">i</button>
-    <button class="r drum">r</button>
-    <button class="e drum">e</button>
-    <button class="w drum">w</button>
-    <button class="o drum">o</button>
-    <button class="r drum">r</button>
-    <button class="k drum">k</button>
+    <button onclick="showHide()" class="f drum gif">f</button>
+    <button class="i drum gif">i</button>
+    <button class="r drum gif">r</button>
+    <button class="e drum gif">e</button>
+    <button class="w drum gif">w</button>
+    <button class="o drum gif">o</button>
+    <button class="r drum gif">r</button>
+    <button class="k drum gif">k</button>
+    <button class="s drum gif">s</button>
+
   </div>
 
   <footer>
