--- a/index.html
+++ b/index.html
@@ -15,15 +15,33 @@
     <p class="any"> 2024 </p>
   <h3 id="subtitle"> 🍀 Good luck and health 🍀 </h3>
   <div class="set">
-    <button onclick="showHide()" class="f drum gif">f</button>
-    <button class="i drum gif">i</button>
-    <button class="r drum gif">r</button>
-    <button class="e drum gif">e</button>
-    <button class="w drum gif">w</button>
-    <button class="o drum gif">o</button>
-    <button class="r drum gif">r</button>
-    <button class="k drum gif">k</button>
-    <button class="s drum gif">s</button>
+
+    <button class="f drum gif" onclick="toggleImage()">f</button>
+    <img id="gifF" src="./images/gifF.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="i drum gif" onclick="toggleImage()">i</button>
+    <img id="gifI" src="./images/gifI.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="r drum gif" onclick="toggleImage()">r</button>
+    <img id="gifR" src="./images/gifR.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="e drum gif" onclick="toggleImage()">e</button>
+    <img id="gifE" src="./images/gifE.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="w drum gif" onclick="toggleImage()">w</button>
+    <img id="gifW" src="./images/gifW.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="o drum gif" onclick="toggleImage()">o</button>
+    <img id="gifO" src="./images/gifO.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="r drum gif" onclick="toggleImage()">r</button>
+    <img id="gifR2" src="./images/gifR.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="k drum gif" onclick="toggleImage()">k</button>
+    <img id="gifK" src="./images/gifK.gif" alt="Gif fireworks" style="display: none;">
+
+    <button class="s drum gif" onclick="toggleImage()">s</button>
+    <img id="gifS" src="./images/gifS.gif" alt="Gif fireworks" style="display: none;">
 
   </div>
 
